fix: spacing variable name

--- a/src/styles/components/um-generic-form.scss
+++ b/src/styles/components/um-generic-form.scss
@@ -23,7 +23,7 @@ div.um.um-register {
     }
 
     & .um-field-divider {
-        margin-top: $spacing-mediun;
+        margin-top: $spacing-medium;
     }
 
     & .um-field-block[data-key="um_block_2070_18"] {
